@@ -93,6 +93,8 @@ Trunk (unreleased changes)
     AVRO-287. Make RPC interop tests work with new Python implementation
     (hammer)
 
+    AVRO-136. Add support for building/releasing python eggs (hammer)
+
   IMPROVEMENTS
 
     AVRO-157. Changes from code review comments for C++. (sbanacho)
